--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "jsnext:main": "./lib/es6/index.js",
   "types": "./types/index.d.ts",
   "scripts": {
-    "build": "rimraf lib && yarn build:commonjs && yarn build:es6 && yarn build:amd && yarn build:umd && yarn build:system",
+    "build": "rimraf lib && yarn build:commonjs && yarn build:es6 && yarn build:amd && yarn build:system && browserify lib/commonjs/index.js --standalone jsvat -o lib/umd/index.js",
     "build:commonjs": "yarn ts --outDir lib/commonjs --module CommonJS --target ES5",
     "build:es6": "yarn ts --outDir lib/es6 --module ES6",
     "build:amd": "yarn ts --outDir lib/amd --module AMD",
-    "build:umd": "yarn ts --outDir lib/umd --module UMD",
+    "build:umd": "yarn build:commonjs && browserify lib/commonjs/index.js --standalone jsvat -o lib/umd/index.js",
     "build:system": "yarn ts --outDir lib/system --module System",
     "prettier": "prettier --write 'src/**/*.ts'",
     "prettier:check": "prettier --check 'src/**/*.ts'",
@@ -61,16 +61,17 @@
     "@babel/preset-env": "7.13.15",
     "babel": "6.23.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "browserify": "17.0.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "rimraf": "3.0.2",
     "ts-loader": "8.1.0",
-    "tslint": "6.1.3",
+    "tslint": "^5.8.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-immutable": "6.0.1",
-    "typescript": "4.2.4"
+    "typescript": "^3.0.0"
   },
   "husky": {
     "hooks": {
